# cec-infrastructure

./: .env  .gitignore  docker-compose.yml  flake.nix  kafka-kraft.yml  multi-broker.yml  shell.nix  single-broker.yml
config/: kafka-1.cnf  kafka-2.cnf  kafka-3.cnf
creds-server/: .envrc  package-lock.json  package.json  shell.nix
creds-server/backend/: .envrc  .gitignore  Cargo.toml  default.nix
creds-server/backend/src/: db.sqlite  generate_token.rs  jwt.rs  main.rs  sql.rs  test
creds-server/frontend/: .envrc  index.html  package-lock.json  package.json  vite.config.ts
creds-server/frontend/src/: Admin.tsx  App.tsx  AuthContext.tsx  Files.tsx  Home.tsx  Login.tsx  Student.tsx  admin.css  files.css  login.css  main.tsx
creds-server/src/: App.tsx  Login.tsx  main.tsx
scripts/: add_client_ssh.sh  add_group_ssh.sh  create_admin_creds.sh  create_broker_creds.sh  create_ca.sh  create_client_creds.sh  create_client_topics.sh  create_group_creds.sh  create_group_topics.sh  delete_client_topics.sh  grant_read_experiment.sh  parse_creds.py  print_client_config.py  print_group_ips.sh  zip_client_creds.sh  zip_frontend.sh  zip_group_creds.sh
