[package]
name = "backend"
version = "0.1.0"
edition = "2024"
default-run = "backend"

[[bin]]
name = "generate-token"
path = "src/generate_token.rs"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
anyhow = "1.0.99"
serde = {version = "1.0.219", features = ["derive"]}
tracing-subscriber = "0.3.20"
tracing = "0.1.41"
serde_json = "1.0.143"
jsonwebtoken = "9.3.1"
axum-extra = { version = "0.10.1", features = ["cookie"]}
r2d2_sqlite = "0.31.0"
r2d2 = "0.8.10"
tokio-util = { version = "0.7.16", features = [ "io" ]}
sendgrid = "0.24.1"
axum-macros = "0.5.0"
indoc = "2.0.6"
